Test du Jenkinsfile.

--- a/conf/bdd.conf
+++ b/conf/bdd.conf
@@ -1,5 +1,5 @@
 {
-	"user": null,
-	"database": null,
-	"password": null
+	"user": "[user]",
+	"database": "[database]",
+	"password": "[password]"
 }
