Test du Jenkinsfile.

--- a/conf/bdd.conf
+++ b/conf/bdd.conf
@@ -1,5 +1,5 @@
 {
-	"user": "$user$",
-	"database": "$database$",
-	"password": "$password$"
+	"user": "[user]",
+	"database": "[database]",
+	"password": "[password]"
 }
